# Oracle_One_G9_Paolov7_03082025

./: .gitignore  CHANGELOG.md  mega_setup.ps1  project-config.txt  tatus
Oracle_One_G9/: project_info.txt
Oracle_One_G9/Cursos/HTML y CSS Clases, Posicionamiento y Flexbox/01 Selectores y posicionamiento/2067-html-css-desarrollo-estructura-archivos-aula5/: README.md  index.html  style.css
Oracle_One_G9/Cursos/HTML y CSS Clases, Posicionamiento y Flexbox/04 Manejando los botones/Manipulado los botnones posicionamiento-flexbox-aula3/: index.html  style.css
Oracle_One_G9/Cursos/HTML-y-CSS-trabajando-con-responsividad-y-publicación-de-proyectos/01-unidades-demedidas/: README.md
Oracle_One_G9/Cursos/HTML-y-CSS-trabajando-con-responsividad-y-publicación-de-proyectos/02-Adaptando-los-Elementos/: about.html  index.html
Oracle_One_G9/Cursos/HTML-y-CSS-trabajando-con-responsividad-y-publicación-de-proyectos/log/: CHANGELOG.md
Oracle_One_G9/notebooks/: ejemplo.ipynb
automation/scripts-bash/: automation_main.sh
automation/scripts-python/: automation_main.py
backend/cpp-services/: CMakeLists.txt  main.cpp
backend/java-api/: pom.xml
backend/python-api/: main.py  requirements.txt
frontend/angular-app/: package.json
frontend/react-app/: package.json
frontend/vue-app/: package.json
tools/setup-scripts/: install_basic_tools.ps1  installation_readme.md  setup_all.ps1  setup_environment.ps1
tools/setup-scripts/global/: install_dev_tools.ps1
(+4 files in other folders)
